--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         -1px -1px 0 #000,  
         1px -1px 0 #000,
         -1px 1px 0 #000,
-        1px 1px 0 #000;"><span class="typed" data-typed-items="Finance Specialist"></span></p>
+        1px 1px 0 #000;"><span class="typed" data-typed-items="Finance Specialist & Digital Marketing"></span></p>
       </div>
     </section>
     <!-- End Hero -->
